# mod_30.1-33

./: .env.sample  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  pyproject.toml  report.txt  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
nginx/: nginx.conf
nginx/html/: index.html
on_learning/: apps.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
on_learning/management/commands/: record_course_lesson_details.py  record_payment_details.py
on_learning/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscribe.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: add_all_data.py  add_test_user.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_payment_method.py
